--- a/Inventory-helper/nbproject/project.properties
+++ b/Inventory-helper/nbproject/project.properties
@@ -36,7 +36,8 @@ file.reference.sqlite-jdbc-3.7.2.jar=lib/sqlite-jdbc-3.7.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.7.2.jar}
+    ${file.reference.sqlite-jdbc-3.7.2.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
