--- a/Inventory-helper/nbproject/project.properties
+++ b/Inventory-helper/nbproject/project.properties
@@ -31,13 +31,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/Inventory_Helper.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.flatlaf-1.0-rc3.jar=lib\\flatlaf-1.0-rc3.jar
 file.reference.Inventory-helper-src=src
 file.reference.sqlite-jdbc-3.7.2.jar=lib/sqlite-jdbc-3.7.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqlite-jdbc-3.7.2.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.flatlaf-1.0-rc3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
