--- a/Inventory-helper/.classpath
+++ b/Inventory-helper/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.7.2.jar"/>
 	<classpathentry kind="lib" path="lib/flatlaf-1.0-rc3.jar"/>
+	<classpathentry kind="lib" path="lib/flatlaf-intellij-themes-1.0-rc3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
