--- a/Inventory-helper/nbproject/project.properties
+++ b/Inventory-helper/nbproject/project.properties
@@ -32,6 +32,7 @@ dist.jar=${dist.dir}/Inventory_Helper.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.flatlaf-1.0-rc3.jar=lib\\flatlaf-1.0-rc3.jar
+file.reference.flatlaf-intellij-themes-1.0-rc3.jar=lib\\flatlaf-intellij-themes-1.0-rc3.jar
 file.reference.Inventory-helper-src=src
 file.reference.sqlite-jdbc-3.7.2.jar=lib/sqlite-jdbc-3.7.2.jar
 includes=**
@@ -39,7 +40,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.sqlite-jdbc-3.7.2.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.flatlaf-1.0-rc3.jar}
+    ${file.reference.flatlaf-1.0-rc3.jar}:\
+    ${file.reference.flatlaf-intellij-themes-1.0-rc3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
